# underworld2

./: pyproject.toml
.github/workflows/: manual.yml
conda/: meta.yaml  run_test.sh
underworld.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
underworld/libUnderworld/: CMakeLists.txt  SConfigure
underworld/libUnderworld/PICellerator/MaterialPoints/: CMakeLists.txt
underworld/libUnderworld/PICellerator/MaterialPoints/src/: GeneralSwarm.cpp
underworld/libUnderworld/PICellerator/PopulationControl/: CMakeLists.txt
underworld/libUnderworld/PICellerator/Utils/: CMakeLists.txt
underworld/libUnderworld/PICellerator/Weights/: CMakeLists.txt
underworld/libUnderworld/PICellerator/libPICellerator/: CMakeLists.txt
underworld/libUnderworld/Solvers/Assembly/: CMakeLists.txt
underworld/libUnderworld/Solvers/KSPSolvers/: CMakeLists.txt
underworld/libUnderworld/Solvers/KSPSolvers/src/: StokesBlockKSPInterface.c
underworld/libUnderworld/Solvers/KSPSolvers/src/BSSCR/: auglag-driver-DGTGD.c
underworld/libUnderworld/Solvers/SLE/: CMakeLists.txt
underworld/libUnderworld/Solvers/libSolvers/: CMakeLists.txt
underworld/libUnderworld/StGermain/Base/: CMakeLists.txt
underworld/libUnderworld/StGermain/Base/Automation/: CMakeLists.txt
underworld/libUnderworld/StGermain/Base/Container/: CMakeLists.txt
underworld/libUnderworld/StGermain/Base/Context/: CMakeLists.txt
underworld/libUnderworld/StGermain/Base/Extensibility/: CMakeLists.txt
underworld/libUnderworld/StGermain/Base/Extensibility/src/: Module.c
underworld/libUnderworld/StGermain/Base/Foundation/: CMakeLists.txt
underworld/libUnderworld/StGermain/Base/IO/: CMakeLists.txt
underworld/libUnderworld/StGermain/Base/IO/src/: Journal.cpp
underworld/libUnderworld/StGermain/Utils/: CMakeLists.txt
underworld/libUnderworld/StGermain/libStGermain/: CMakeLists.txt
underworld/libUnderworld/StGermain/pcu/: CMakeLists.txt
underworld/libUnderworld/StgDomain/Geometry/: CMakeLists.txt
underworld/libUnderworld/StgDomain/Mesh/: CMakeLists.txt
underworld/libUnderworld/StgDomain/Shape/: CMakeLists.txt
underworld/libUnderworld/StgDomain/Swarm/: CMakeLists.txt
underworld/libUnderworld/StgDomain/Utils/: CMakeLists.txt
underworld/libUnderworld/StgDomain/libStgDomain/: CMakeLists.txt
underworld/libUnderworld/StgFEM/Assembly/: CMakeLists.txt
underworld/libUnderworld/StgFEM/Discretisation/: CMakeLists.txt
underworld/libUnderworld/StgFEM/SLE/: CMakeLists.txt
underworld/libUnderworld/StgFEM/SLE/ProvidedSystems/: CMakeLists.txt
underworld/libUnderworld/StgFEM/SLE/ProvidedSystems/Energy/: CMakeLists.txt
underworld/libUnderworld/StgFEM/SLE/ProvidedSystems/Energy/src/: Energy_SLE_Solver.c
underworld/libUnderworld/StgFEM/SLE/ProvidedSystems/StokesFlow/: CMakeLists.txt
underworld/libUnderworld/StgFEM/SLE/SystemSetup/: CMakeLists.txt
underworld/libUnderworld/StgFEM/Utils/: CMakeLists.txt
underworld/libUnderworld/StgFEM/libStgFEM/: CMakeLists.txt
underworld/libUnderworld/Underworld/Function/: CMakeLists.txt
underworld/libUnderworld/Underworld/Rheology/: CMakeLists.txt
underworld/libUnderworld/Underworld/Rheology/src/: ConstitutiveMatrixCartesian.cpp
underworld/libUnderworld/Underworld/SysTest/AnalyticPlugins/: CMakeLists.txt
underworld/libUnderworld/Underworld/Utils/: CMakeLists.txt
underworld/libUnderworld/Underworld/Utils/AdvectionDiffusion/: CMakeLists.txt
underworld/libUnderworld/Underworld/Utils/AdvectionDiffusion/src/: AdvectionDiffusionSLE.cpp  Residual.cpp
underworld/libUnderworld/Underworld/Utils/src/: Fn_Integrate.cpp  MatrixAssemblyTerm_NA__NB__Fn.cpp  MatrixAssemblyTerm_NA_i__NB_i__Fn.cpp  VectorAssemblyTerm_NA__Fn.cpp  VectorAssemblyTerm_NA_i__Fn_i.cpp  VectorAssemblyTerm_NA_j__Fn_ij.cpp  VectorSurfaceAssemblyTerm_NA__Fn__ni.cpp
underworld/libUnderworld/Underworld/libUnderworld/: CMakeLists.txt
underworld/libUnderworld/config/: Package.py
underworld/libUnderworld/config/utils/: path.py
underworld/libUnderworld/gLucifer/Base/: CMakeLists.txt
underworld/libUnderworld/gLucifer/DrawingObjects/: CMakeLists.txt
underworld/libUnderworld/gLucifer/DrawingObjects/src/: CrossSection.cpp  Sampler.cpp  SwarmViewer.cpp
underworld/libUnderworld/gLucifer/libgLucifer/: CMakeLists.txt
underworld/libUnderworld/libUnderworldPy/: CMakeLists.txt
